# koki

./: CLAUDE.md  Cargo.toml  README.md
.claude/: settings.local.json
docs/: README.md  spec-01-graceful-shutdown.md  spec-02-timestamp-on-messages.md  spec-03-sender-name-in-sent-confirmation.md  spec-04-configurable-display-name.md  spec-05-input-validation-and-error-display.md  spec-06-trim-trailing-newline.md  spec-07-readme-and-documentation.md  spec-08-integration-test.md
docs/specs/: 01-graceful-shutdown.md  02-timestamps.md  03-sender-name.md  04-default-name.md  05-input-validation.md  06-trim-newline.md  07-readme.md  08-integration-test.md  09-encryption.md  10-message-history.md  11-file-sharing.md  12-typing-indicators.md  13-direct-messages.md  14-peer-list.md  15-reconnection.md  16-ansi-colors.md  17-multi-topic.md  18-nonce-dedup.md  19-tui-ratatui.md  20-discovery.md  21-persistent-identity.md  22-reactions-threads.md  23-voice-notes.md  24-cross-compile.md  25-plugin-system.md  26-web-ui.md  27-moderation.md  28-offline-queue.md  29-verified-identity.md  30-protocol-bridge.md  README.md
src/: main.rs
tests/: integration.rs
